--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -548,11 +548,12 @@ a[data-variant][href] {
     margin-block: -2px;
 
     &:not(:last-child) {
-      margin-left: -8px;
+      margin-inline-start: -8px; // When the icon is not alone, it should be closer to left edge on LTR languages
     }
   }
 
   &:where(
+    [data-icon-end],
     [data-is-external],
     [data-protocol='tel'],
     [data-protocol='mailto']
@@ -561,7 +562,7 @@ a[data-variant][href] {
     margin-block: -2px;
 
     &:not(:first-child) {
-      margin-right: -8px;
+      margin-inline-end: -8px; // When the icon is not alone, it should be closer to right edge on LTR languages
     }
   }
 
