UHF-8938: Fix picture caption printing on tpr_unit

--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -46,9 +46,9 @@
   {% endif %}
 
   {# Main image caption #}
-  {% if content.picture_url_override_caption|render %}
-    {% set main_image_caption = content.picture_url_override_caption %}
-  {% elseif content.picture_url_override_caption|render %}
+  {% if content.unit_picture_caption|render %}
+    {% set main_image_caption = content.unit_picture_caption %}
+  {% else %}
     {% set main_image_caption = '' %}
   {% endif %}
 
