UHF-8938: Add photographer to caption

--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -46,8 +46,8 @@
   {% endif %}
 
   {# Main image caption #}
-  {% if content.unit_picture_caption|render %}
-    {% set main_image_caption = content.unit_picture_caption %}
+  {% if unit_picture_caption|render %}
+    {% set main_image_caption = unit_picture_caption %}
   {% else %}
     {% set main_image_caption = '' %}
   {% endif %}
