--- a/src/scss/06_components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/06_components/paragraphs/_liftup-with-image.scss
@@ -375,7 +375,7 @@ $breakpoint-design-image-on-left-right: 830px;
 
   .liftup-with-image__content {
     justify-self: end;
-    padding-block-start: $spacing-double;
+    padding-block-start: $spacing;
     padding-inline: 0;
     z-index: 1;
 
