Modified the unit services compoent title to be translated with a context and added a translation

--- a/templates/views/views-view--unit-services.html.twig
+++ b/templates/views/views-view--unit-services.html.twig
@@ -45,7 +45,7 @@
       'component--service-list',
       'component--hardcoded',
     ],
-    component_title: 'Services'|trans
+    component_title: 'Services'|t({}, {'context': 'Unit services title'})
   }
 %}
   {% block component_content %}
