--- a/src/scss/06_components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/06_components/paragraphs/_liftup-with-image.scss
@@ -37,6 +37,10 @@ $breakpoint-design-image-on-left-right: 830px;
     }
   }
 
+  .image__caption {
+    color: $color-black;
+  }
+
   &.component--liftup-with-image-img-on-right .liftup-with-image .image__caption,
   &.component--liftup-with-image-img-on-left .liftup-with-image .image__caption {
     @include breakpoint($breakpoint-design-image-on-left-right) {
@@ -347,6 +351,7 @@ $breakpoint-design-image-on-left-right: 830px;
 
     // stylelint-disable-next-line max-nesting-depth
     .image__caption {
+      color: $color-black;
       padding-left: $spacing;
 
       @include breakpoint($breakpoint-m) {
