--- a/src/scss/06_components/pages/_basic-page.scss
+++ b/src/scss/06_components/pages/_basic-page.scss
@@ -89,7 +89,8 @@
   .page-divider,
   .main-image,
   .long-desc,
-  .enriched-content:not(.components) {
+  .enriched-content:not(.components),
+  .content-tags {
     @include components-container-max-width;
     @include component-side-padding;
     margin-left: auto;
