--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -27,6 +27,11 @@
   --min-size: 44px;
   --outline-gutter: 2px;
   --outline-width: 3px;
+
+  // Normalize.css rules
+  // Correct the inability to style clickable types in iOS and Safari.
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -webkit-appearance: button;
   align-content: flex-start;
   align-items: center;
   background-color: var(--background-color, transparent);
@@ -35,12 +40,27 @@
   color: var(--color);
   cursor: pointer;
   display: inline-flex;
+
+  // Normalize.css rules
+  // 1. Change the font styles in all browsers.
+  // font-family: inherit; /* 1 */ // These are handled by HDBT
+  // font-size: 100%; /* 1 */ // These are handled by HDBT
   font-weight: $font-weight-medium;
   justify-content: center;
+
+  // Normalize.css rules
+  // 1. Change the font styles in all browsers.
+  // 2. Remove the margin in Firefox and Safari.
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
   min-height: var(--min-size);
   min-width: var(--min-size);
   padding: 0 var(--spacing-2-xs);
   text-decoration: none;
+
+  // Normalize.css rule
+  // Remove the inheritance of text transform in Edge, Firefox, and IE.
+  text-transform: none;
   vertical-align: top;
 }
 
@@ -53,11 +73,40 @@
   box-sizing: border-box;
 }
 
+ // Normalize.css rules
+ // Correct the inability to style clickable types in iOS and Safari.
+.hds-button[type='button'],
+.hds-button[type='reset'],
+.hds-button[type='submit'] {
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -webkit-appearance: button;
+}
+
+ // Normalize.css rules
+ // Remove the inner border and padding in Firefox.
+.hds-button::-moz-focus-inner,
+.hds-button[type='button']::-moz-focus-inner,
+.hds-button[type='reset']::-moz-focus-inner,
+.hds-button[type='submit']::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+ // Normalize.css rules
+ // Restore the focus styles unset by the previous rule.
+ .hds-button:-moz-focusring,
+ .hds-button[type='button']:-moz-focusring,
+ .hds-button[type='reset']:-moz-focusring,
+ .hds-button[type='submit']:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
 // button transitions
 .hds-button:hover,
 .hds-button:focus,
 .hds-button:active {
   transition-duration: 85ms;
+  // stylelint-disable-next-line plugin/no-low-performance-animation-properties
   transition-property: background-color, border-color, color;
   transition-timing-function: ease-out;
 }
@@ -452,6 +501,11 @@ a[data-variant][href] {
   --min-size: 44px;
   --outline-gutter: 2px;
   --outline-width: 3px;
+
+  // Normalize.css rules
+  // Correct the inability to style clickable types in iOS and Safari.
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -webkit-appearance: button;
   align-content: flex-start;
   align-items: center;
   background-color: var(--background-color, transparent);
@@ -460,21 +514,30 @@ a[data-variant][href] {
   color: var(--color);
   cursor: pointer;
   display: inline-flex;
+
+  // Normalize.css rules
+  // 1. Change the font styles in all browsers.
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
   font-weight: $font-weight-medium;
   gap: $spacing;
   justify-content: center;
+
+  // Normalize.css rules
+  // 1. Change the font styles in all browsers.
+  // 2. Remove the margin in Firefox and Safari.
+  // line-height: 1.15; /* 1 */  // Overridden later in original HDS code with 1.25, left for comparison with HDS
   line-height: 1.25em;
+  margin: 0; /* 2 */
   min-height: var(--min-size);
   min-width: var(--min-size);
   padding: var(--spacing-s) var(--spacing-m);
   text-decoration: none;
-  vertical-align: top;
 
-  & {
-    gap: $spacing;
-    line-height: 1.25em;
-    padding: var(--spacing-s) var(--spacing-m);
-  }
+  // Normalize.css rule
+  // Remove the inheritance of text transform in Edge, Firefox, and IE.
+  text-transform: none;
+  vertical-align: top;
 
   &,
   &::before,
@@ -483,6 +546,34 @@ a[data-variant][href] {
   & *::before,
   & *::after {
     box-sizing: border-box;
+  }
+
+  // Normalize.css rules
+  // Correct the inability to style clickable types in iOS and Safari.
+  &[type='button'],
+  &[type='reset'],
+  &[type='submit'] {
+    // stylelint-disable-next-line property-no-vendor-prefix
+    -webkit-appearance: button;
+  }
+
+  // Normalize.css rules
+  // Remove the inner border and padding in Firefox.
+  &::-moz-focus-inner,
+  &[type='button']::-moz-focus-inner,
+  &[type='reset']::-moz-focus-inner,
+  &[type='submit']::-moz-focus-inner {
+    border-style: none;
+    padding: 0;
+  }
+
+  // Normalize.css rules
+  // Restore the focus styles unset by the previous rule.
+  &:-moz-focusring,
+  &[type='button']:-moz-focusring,
+  &[type='reset']:-moz-focusring,
+  &[type='submit']:-moz-focusring {
+    outline: 1px dotted ButtonText;
   }
 
   &:hover,
@@ -502,7 +593,6 @@ a[data-variant][href] {
   &:focus {
     background-color: var(--background-color-focus, transparent);
     color: var(--color-focus);
-    // outline: none;
   }
 
   &:focus:hover {
@@ -540,7 +630,6 @@ a[data-variant][href] {
   &:focus {
     outline: var(--outline-width) solid var(--focus-outline-color);
     outline-offset: var(--outline-gutter);
-    // outline-offset: 2px;
   }
 
   &[data-icon-start]::before {
