--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -552,7 +552,7 @@ p > a.hds-button.hds-button--supplementary:first-child {
 // ---------------------------------------------------------------------------------------------------------------------
 // Button v2
 
-a[data-variant][href] {
+[data-hds='button']:not([class*='hds-button']) {
   @include font('button');
 
   --border-width: 2px;
