--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -576,10 +576,10 @@ p > a.hds-button.hds-button--supplementary:first-child {
 
   // Normalize.css rules
   // 1. Change the font styles in all browsers.
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
+  // font-family: inherit; /* 1 */ // These are handled by HDBT
+  // font-size: 100%; /* 1 */ // These are handled by HDBT
   font-weight: $font-weight-medium;
-  gap: $spacing;
+  gap: $spacing; // New style specific
   justify-content: center;
 
   // Normalize.css rules
@@ -637,7 +637,7 @@ p > a.hds-button.hds-button--supplementary:first-child {
   }
 
   &:hover,
-  &:focus,
+  &:focus-visible,
   &:active {
     transition-duration: 85ms;
     // stylelint-disable-next-line plugin/no-low-performance-animation-properties
@@ -650,13 +650,19 @@ p > a.hds-button.hds-button--supplementary:first-child {
     color: var(--color-hover);
   }
 
-  &:focus {
+  // HDBT focus outline styles differ from HDS on purpose as outline focus ring is
+  // better than the after-pseudoelement stuff HDS is using
+  &:focus-visible,
+  &:active {
     background-color: var(--background-color-focus, transparent);
+    box-shadow: 0 0 0 calc(var(--outline-gutter, 2px) + var(--outline-width, 3px)) var(--submit-input-focus-gutter-color, transparent);
     color: var(--color-focus);
+    outline: var(--outline-width, 3px) solid var(--focus-outline-color, $color-black);
+    outline-offset: var(--outline-gutter, 2px);
   }
 
-  &:focus:hover {
-    background-color: var(--background-color-hover-focus, transparent);
+  &:not(:disabled) {
+    border-color: var(--border-color, transparent);
   }
 
   &:disabled {
@@ -666,39 +672,46 @@ p > a.hds-button.hds-button--supplementary:first-child {
     cursor: not-allowed;
   }
 
-  &:not(:disabled) {
-    border-color: var(--border-color, transparent);
+  &:focus-visible:hover,
+  &:active:hover {
+    background-color: var(--background-color-hover-focus, transparent);
   }
 
   &:not(:disabled):hover {
     border-color: var(--border-color-hover, transparent);
   }
 
-  &:not(:disabled):active,
-  &:not(:disabled):focus {
+  &:not(:disabled):focus-visible,
+  &:not(:disabled):active {
     border-color: var(--border-color-focus, transparent);
   }
 
-  &:not(:disabled):active:hover,
-  &:not(:disabled):focus:hover {
+  &:not(:disabled):focus-visible:hover,
+  &:not(:disabled):active:hover {
     border-color: var(--border-color-hover-focus, transparent);
     color: var(--color-hover-focus);
   }
 
-  // FOCUS OUTLINE
-  &:active,
-  &:focus {
-    outline: var(--outline-width) solid var(--focus-outline-color);
-    outline-offset: var(--outline-gutter);
+  &[type="button"],
+  &[type="reset"],
+  &[type="submit"] {
+    cursor: pointer;
   }
 
+
+  // ICONS
   &[data-icon-start]::before {
     @include pseudo-icon(null, $size: $spacing-and-half, $color: currentColor);
     margin-block: -2px;
+  }
 
-    &:not(:last-child) {
-      margin-inline-start: -8px; // When the icon is not alone, it should be closer to left edge on LTR languages
+  &:not(:empty)[data-icon-start]::before{
+    margin-inline-end: -8px;
+    margin-inline-start: -16px; // In current HDS styles, this icon is closer to the starting edge than plain label (left edge on LTR languages)
     }
+
+  &:empty{
+    padding-inline: 16px;
   }
 
   &:where(
@@ -709,10 +722,15 @@ p > a.hds-button.hds-button--supplementary:first-child {
   )::after {
     @include pseudo-icon(null, $size: $spacing-and-half, $color: currentColor);
     margin-block: -2px;
+  }
 
-    &:not(:first-child) {
-      margin-inline-end: -8px; // When the icon is not alone, it should be closer to right edge on LTR languages
-    }
+  &:not(:empty):where(
+    [data-icon-end],
+    [data-is-external],
+    [data-protocol='tel'],
+    [data-protocol='mailto']
+  )::after{
+    margin-inline-end: -16px; // In current HDS styles, this icon is closer to the ending edge than plain label (right edge on LTR languages)
   }
 
   &[data-is-external]::after {
@@ -746,8 +764,9 @@ p > a.hds-button.hds-button--supplementary:first-child {
     transform: scaleX(var(--lang-direction, 1));
   }
 
-  // Content from HDS button.css starts
-  // .hds-button
+  // PRIMARY
+  // default (bus)
+  &:not([data-variant]), // Fallback to primary button style
   &[data-variant='primary'] {
     // Backgrounds
     --background-color: var(--theme-bg1, var(--color-bus));
@@ -772,6 +791,7 @@ p > a.hds-button.hds-button--supplementary:first-child {
 
     // Focus ring
     --focus-outline-color: var(--theme-focus, var(--color-coat-of-arms));
+    --submit-input-focus-gutter-color: var(--theme-focus-gutter-color, var(--color-white));
   }
 
   // SECONDARY
@@ -800,10 +820,12 @@ p > a.hds-button.hds-button--supplementary:first-child {
 
     // Focus ring
     --focus-outline-color: var(--theme-focus, var(--color-coat-of-arms));
+    --submit-input-focus-gutter-color: var(--theme-focus-gutter-color, var(--color-white));
   }
 
   // SUPPLEMENTARY
   &[data-variant='supplementary'] {
+
     // Backgrounds
     --background-color: var(--theme-bg2, transparent);
     --background-color-hover: var(--theme-bg2, var(--color-bus-light));
@@ -827,6 +849,12 @@ p > a.hds-button.hds-button--supplementary:first-child {
 
     // Focus ring
     --focus-outline-color: var(--theme-focus, transparent);
+    --submit-input-focus-gutter-color: var(--theme-focus-gutter-color, transparent);
+    padding: $spacing-half; // supplementary buttons have less padding to fit more nicely inline
+  }
+
+  &[data-variant='supplementary']:not([data-icon-start]) {
+    margin-inline-start: -10px; // supplementary buttons with no icon try to align their label with paragraph text
   }
 
   // LOADING
@@ -855,7 +883,6 @@ p > a.hds-button.hds-button--supplementary:first-child {
     // Cursor
     cursor: wait;
   }
-
 
   // UTILITY
   // success
