UHF-9032: Put TPR data into accordions and fix a margin issue.

--- a/src/scss/06_components/paragraphs/_accordion.scss
+++ b/src/scss/06_components/paragraphs/_accordion.scss
@@ -137,6 +137,10 @@
   > *:first-child {
     margin-top: 0;
   }
+
+  > .component--paragraph-text .component__container .component__content > .form-item:first-child > *:first-child {
+    margin-top: 0;
+  }
 }
 
 .component--accordion .component--image .component__content {
