--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -112,7 +112,7 @@
 
             {% include '@hdbt/component/accordion.twig' ignore missing with {
               heading_level: 'h2',
-              heading: content.price_info['#title'],
+              heading: 'Charges'|t({}, {'context': 'TPR Unit tpr data accordion heading'}),
               content: accordion_content,
             } %}
           {% endif %}
@@ -127,15 +127,15 @@
               {% endembed %}
 
             {% endset %}
-          {% endif %}
 
-          {% if has_other_info %}
             {% include '@hdbt/component/accordion.twig' ignore missing with {
               heading_level: 'h2',
-              heading: content.contacts['#title'],
+              heading: 'Other contact information'|t({}, {'context': 'TPR Unit tpr data accordion heading'}) ,
               content: contacts_accordion_content,
             } %}
-
+          {% endif %}
+ 
+          {% if has_other_info %}
             {% set other_info_accordion_content %}
 
               {% embed "@hdbt/misc/component.twig" with { component_classes: [ 'component--paragraph-text' ] } %}
@@ -152,7 +152,7 @@
 
           {% include '@hdbt/component/accordion.twig' ignore missing with {
             heading_level: 'h2',
-            heading: content.other_info['#title'],
+            heading: 'Further information'|t({}, {'context': 'TPR Unit tpr data accordion heading'}),
             content: other_info_accordion_content,
           } %}
 
