UHF-7269: Use remify()

--- a/src/scss/06_components/navigation/_table-of-contents.scss
+++ b/src/scss/06_components/navigation/_table-of-contents.scss
@@ -108,7 +108,7 @@
       --icon-size: #{$spacing-quadruple};
   
       @include breakpoint($breakpoint-m) {
-        --icon-size: 6.25rem;
+        --icon-size: #{remify(100px)};
       }
     }
   }
