--- a/templates/navigation/menu--external-menu--fallback.html.twig
+++ b/templates/navigation/menu--external-menu--fallback.html.twig
@@ -29,18 +29,18 @@
 
     {# Render "back" menu link. #}
     {% if menu_link_back %}
-      {% spaceless %}
+      {% apply spaceless %}
         {% set menu_link_back_title %}
           <span class="mmenu__back-wrapper">{{ menu_link_back.title }}</span>
         {% endset %}
         {% set link_attributes = {'class': [ 'mmenu__back mmenu__back--in-path' ]} %}
         {{ link(menu_link_back_title, menu_link_back.url, link_attributes) }}
-      {% endspaceless %}
+      {% endapply %}
     {% endif %}
 
     {# Current page link #}
     {% if menu_link_current_or_parent %}
-      {% spaceless %}
+      {% apply spaceless %}
         {% set menu_link_current_or_parent_title %}
           {{ menu_link_current_or_parent.title }}
         {% endset %}
@@ -52,7 +52,7 @@
           'aria-current': menu_link_current_or_parent.is_currentPage ? 'page': null,
         } %}
         {{ link(menu_link_current_or_parent_title, menu_link_current_or_parent.url, link_attributes) }}
-      {% endspaceless %}
+      {% endapply %}
     {% endif %}
 
     {% if items %}
@@ -78,7 +78,7 @@
             {% endset %}
 
             {% if not item.is_nolink %}
-              {% spaceless %}
+              {% apply spaceless %}
                 {% set link_attributes = {
                   'class': [
                     'mmenu__item-link',
@@ -87,7 +87,7 @@
                   'aria-current': item.is_currentPage ? 'page': null,
                 } %}
                 {{ link(item_title, item.url, link_attributes) }}
-              {% endspaceless %}
+              {% endapply %}
             {% else %}
               <span{{ create_attribute({'class': 'mmenu__item__nolink'} ) }}>{{ item_title }}</span>
             {% endif %}
@@ -96,10 +96,10 @@
               {% set next_item_title %}
                 <span class="visually-hidden">{{ 'Open submenu:'|t({}, {'context': 'Mobile navigation submenu prefix'}) }} {{ item_title }}</span>
               {% endset %}
-              {% spaceless %}
+              {% apply spaceless %}
                 {% set link_attributes = { 'class': [ 'mmenu__forward' ] } %}
                 {{ link(next_item_title, item.next_url, link_attributes) }}
-              {% endspaceless %}
+              {% endapply %}
             {% endif %}
           </li>
         {% endfor %}
