--- a/templates/navigation/menu--external-menu--mega-menu.html.twig
+++ b/templates/navigation/menu--external-menu--mega-menu.html.twig
@@ -73,7 +73,7 @@
             {% endset %}
 
             {% if not item.is_nolink %}
-              {% spaceless %}
+              {% apply spaceless %}
 
                 {% set icon_name = (item.url.getOption('attributes')).icon %}
                 {% if icon_name %}
@@ -94,7 +94,7 @@
 
                 {{ link(item_title, item.url, link_attributes) }}
 
-              {% endspaceless %}
+              {% endapply %}
             {% else %}
               <span{{ create_attribute({'class': 'megamenu__item__nolink'} ) }}>{{ item.title }}</span>
             {% endif %}
