--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -74,7 +74,7 @@
       <li{{ item.attributes.removeAttribute('class', 'lang').addClass(item_classes) }}>
         <span class="menu__link-wrapper">
           {% if not item.is_nolink %}
-            {% spaceless %}
+            {% apply spaceless %}
 
               {% set item_title %}
                 {% set icon_name = (item.url.getOption('attributes')).icon %}
@@ -95,7 +95,7 @@
 
               {{ link(item_title, item.url, link_attributes) }}
 
-            {% endspaceless %}
+            {% endapply %}
           {% else %}
             <span{{ create_attribute({'class': item_classes|merge(['menu__nolink'])}) }}><span class="menu__link__text" id="{{ item_is_collabsible ? link_id }}"{{ item_lang }}>{{ item.title }}</span></span>
           {% endif %}
