UHF-8937: Fixed main image margin when table of contents enabled.

--- a/src/scss/06_components/navigation/_table-of-contents.scss
+++ b/src/scss/06_components/navigation/_table-of-contents.scss
@@ -16,8 +16,9 @@
   }
 }
 
-// Add extra margin to long description if table of contents is enabled.
-.table-of-contents + .long-desc {
+// Add extra margin to long description and main image if table of contents is enabled.
+.table-of-contents + .long-desc,
+.table-of-contents + .main-image {
   @include component-margin-top;
 }
 
