UHF-8937: CSS tweaks to the supports swedish pill and order change.

--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -127,6 +127,7 @@
 
 .unit.unit--full .content-tags {
   margin-bottom: $spacing-and-half;
+  margin-top: $spacing-and-half;
 
   @include breakpoint($breakpoint-m) {
     margin-bottom: $spacing-double;
