--- a/src/scss/06_components/navigation/_table-of-contents.scss
+++ b/src/scss/06_components/navigation/_table-of-contents.scss
@@ -17,8 +17,7 @@
 }
 
 // Add extra margin to long description and main image if table of contents is enabled.
-.table-of-contents + .long-desc,
-.table-of-contents + .main-image {
+.table-of-contents + * {
   @include component-margin-top;
 }
 
