UHF-8937: Updated comment.

--- a/src/scss/06_components/navigation/_table-of-contents.scss
+++ b/src/scss/06_components/navigation/_table-of-contents.scss
@@ -16,7 +16,7 @@
   }
 }
 
-// Add extra margin to long description and main image if table of contents is enabled.
+// Add extra margin to the following element if table of contents is enabled.
 .table-of-contents + * {
   @include component-margin-top;
 }
