--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -558,7 +558,9 @@ p > a.hds-button.hds-button--supplementary:first-child {
   @include font('button');
 
   --border-width: 2px;
+  --button-gap: #{$spacing}; // New style specific
   --color: inherit;
+  --icon-size: #{$spacing-and-half}; // In case new button styles have hel-icon elements, lets set their default size.
   --min-size: 44px;
   --outline-gutter: 2px;
   --outline-width: 3px;
@@ -574,14 +576,15 @@ p > a.hds-button.hds-button--supplementary:first-child {
   border-radius: 0;
   color: var(--color);
   cursor: pointer;
-  display: inline-flex;
+
+  // display: inline-flex;
+  display: inline-block; // This can not be flex, as we do not have a wrapper around the button label and we want to support language attributes.
 
   // Normalize.css rules
   // 1. Change the font styles in all browsers.
   // font-family: inherit; /* 1 */ // These are handled by HDBT
   // font-size: 100%; /* 1 */ // These are handled by HDBT
   font-weight: $font-weight-medium;
-  gap: $spacing; // New style specific
   justify-content: center;
 
   // Normalize.css rules
@@ -592,7 +595,9 @@ p > a.hds-button.hds-button--supplementary:first-child {
   margin: 0; /* 2 */
   min-height: var(--min-size);
   min-width: var(--min-size);
-  padding: var(--spacing-s) var(--spacing-l);
+  padding-block: var(--spacing-s);
+  padding-inline-end:  calc(var(--spacing-l) + var(--button-padding-end-adjust, 0px) + var(--button-padding-end-adjust-supplementary, 0px)); // Default padding + button with icon adjust + supplementary button adjust
+  padding-inline-start:  calc(var(--spacing-l) + var(--button-padding-start-adjust, 0px) + var(--button-padding-start-adjust-supplementary, 0px)); // Default padding + button with icon adjust + supplementary button adjust
   position: relative;
   text-decoration: none;
 
@@ -695,37 +700,123 @@ p > a.hds-button.hds-button--supplementary:first-child {
     color: var(--color-hover-focus);
   }
 
+  // SUPPLEMENTARY
+  &[data-hds-variant='supplementary'] {
+    --button-padding-end-adjust: calc(-16px + var(--icon-size) + var(--button-gap));
+    --button-padding-end-adjust-supplementary: -16px; // Supplementary buttons have less padding on the icon side
+    --button-padding-start-adjust: -24px;
+    line-height: $spacing-and-half; // To avoid too low link buttons
+    text-decoration: underline;
+
+    // Backgrounds
+    --background-color: var(--theme-bg2, transparent);
+    --background-color-hover: var(--theme-bg2, var(--color-bus-light));
+    --background-color-focus: var(--theme-bg2, transparent);
+    --background-color-hover-focus: var(--theme-bg2, var(--color-bus-light));
+    --background-color-disabled: transparent;
+
+    // Borders
+    --border-color: var(--theme-bg2, transparent);
+    --border-color-hover: var(--theme-bg2, transparent);
+    --border-color-focus: var(--theme-bg2, var(--color-coat-of-arms));
+    --border-color-hover-focus: var(--theme-bg2, var(--color-coat-of-arms));
+    --border-color-disabled: transparent;
+
+    // Colors
+    --color: var(--theme-fg2, var(--color-bus));
+    --color-hover: var(--theme-fg2, var(--color-bus-dark));
+    --color-focus: var(--theme-fg2, var(--color-bus));
+    --color-hover-focus: var(--theme-fg2, var(--color-bus-dark));
+    --color-disabled: var(--color-black-40);
+
+    // Focus ring
+    --focus-outline-color: var(--theme-focus, transparent);
+    --submit-input-focus-gutter-color: var(--theme-focus-gutter-color, transparent);
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
+  &[data-hds-variant='supplementary']:not([data-hds-icon-start]) {
+    margin-inline-start: -10px; // supplementary buttons with no icon try to align their label with paragraph text 8px padding + 2px border
+  }
+
   // ICONS
-  &[data-hds-icon-start]::before {
-    @include pseudo-icon(null, $size: $spacing-and-half, $color: currentColor);
-    margin-block: -2px;
-  }
 
-  &:not(:empty)[data-hds-icon-start]::before{
-    margin-inline-start: -16px; // In current HDS styles, this icon is closer to the starting edge than plain label (left edge on LTR languages)
-  }
-
-  &:empty{
-    padding-inline: 16px;
-  }
-
+  // All buttons that contain icons
   &:where(
+    [data-hds-icon-start],
+    [data-hds-icon-end],
+    [data-is-external],
+    [data-protocol='tel'],
+    [data-protocol='mailto']
+  ){
+    --button-padding-end-adjust: -8px; // HDS buttons have less padding on both sides if they contain any icon
+    --button-padding-start-adjust: -8px; // HDS buttons have less padding on both sides if they contain any icon
+  }
+
+  // Buttons with icon on left in LTR languages
+  &[data-hds-icon-start]{
+    --button-padding-start-adjust: calc(-16px + var(--icon-size) + var(--button-gap));
+
+    &[data-hds-variant='supplementary']{
+      --button-padding-start-adjust-supplementary: -16px; // Supplemnentary icons have even less padding
+    }
+  }
+
+  // Buttons with icon on right in LTR languages
+  &:is(
+    [data-hds-icon-end],
+    [data-is-external],
+    [data-protocol='tel'],
+    [data-protocol='mailto']
+  ) {
+    --button-padding-end-adjust: calc(-16px + var(--icon-size) + var(--button-gap));
+  }
+
+  // Prepare icons for the buttons
+  &[data-hds-icon-start]::before,
+  &:is(
     [data-hds-icon-end],
     [data-is-external],
     [data-protocol='tel'],
     [data-protocol='mailto']
   )::after {
     @include pseudo-icon(null, $size: $spacing-and-half, $color: currentColor);
-    margin-block: -2px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
   }
 
-  &:not(:empty):where(
+  &[data-hds-icon-start]::before {
+    inset-inline-start: $spacing; // left on RTL
+  }
+
+  &[data-hds-icon-start][data-hds-variant='supplementary']::before {
+    inset-inline-start: $spacing-half; // Supplementary icons are closer to the button edge
+  }
+
+  &:is(
     [data-hds-icon-end],
     [data-is-external],
     [data-protocol='tel'],
     [data-protocol='mailto']
-  )::after{
-    margin-inline-end: -16px; // In current HDS styles, this icon is closer to the ending edge than plain label (right edge on LTR languages)
+  )::after {
+    inset-inline-end: $spacing; // right on RTL
+  }
+
+  &:is(
+    [data-hds-icon-end],
+    [data-is-external],
+    [data-protocol='tel'],
+    [data-protocol='mailto']
+  )[data-hds-variant='supplementary']::after{
+    inset-inline-end: $spacing-half; // Supplementary icons are closer to the button edge
+  }
+
+  &:empty{
+    padding-inline: $spacing;
   }
 
   &[data-is-external]::after {
@@ -740,6 +831,7 @@ p > a.hds-button.hds-button--supplementary:first-child {
     @include pseudo-icon-replace('mailto');
   }
 
+  // Add arrow-right icon when not overridden with another icon to supplementary button
   &[data-hds-variant='supplementary']:not(
     [data-hds-icon-start],
     [data-is-external],
@@ -753,10 +845,11 @@ p > a.hds-button.hds-button--supplementary:first-child {
   )::after {
     @include pseudo-icon('arrow-right', $size: $spacing-and-half, $color: currentColor, $display: inline-block);
     @include hover-link-arrow-transition;
+    inset-inline-end: 8px;
     margin-block: -2px;
-    order: 3;
-    position: static;
-    transform: scaleX(var(--lang-direction, 1));
+    position: absolute;
+    top: 50%;
+    transform: scaleX(var(--lang-direction, 1)) translateY(-50%);
   }
 
   // PRIMARY
@@ -816,41 +909,6 @@ p > a.hds-button.hds-button--supplementary:first-child {
     // Focus ring
     --focus-outline-color: var(--theme-focus, var(--color-coat-of-arms));
     --submit-input-focus-gutter-color: var(--theme-focus-gutter-color, var(--color-white));
-  }
-
-  // SUPPLEMENTARY
-  &[data-hds-variant='supplementary'] {
-    gap: $spacing-half; // For some reason hds styles have less gap between supplementary icon and label
-
-    // Backgrounds
-    --background-color: var(--theme-bg2, transparent);
-    --background-color-hover: var(--theme-bg2, var(--color-bus-light));
-    --background-color-focus: var(--theme-bg2, transparent);
-    --background-color-hover-focus: var(--theme-bg2, var(--color-bus-light));
-    --background-color-disabled: transparent;
-
-    // Borders
-    --border-color: var(--theme-bg2, transparent);
-    --border-color-hover: var(--theme-bg2, transparent);
-    --border-color-focus: var(--theme-bg2, var(--color-coat-of-arms));
-    --border-color-hover-focus: var(--theme-bg2, var(--color-coat-of-arms));
-    --border-color-disabled: transparent;
-
-    // Colors
-    --color: var(--theme-fg2, var(--color-bus));
-    --color-hover: var(--theme-fg2, var(--color-bus-dark));
-    --color-focus: var(--theme-fg2, var(--color-bus));
-    --color-hover-focus: var(--theme-fg2, var(--color-bus-dark));
-    --color-disabled: var(--color-black-40);
-
-    // Focus ring
-    --focus-outline-color: var(--theme-focus, transparent);
-    --submit-input-focus-gutter-color: var(--theme-focus-gutter-color, transparent);
-    padding: $spacing-half; // supplementary buttons have less padding to fit more nicely inline
-  }
-
-  &[data-hds-variant='supplementary']:not([data-hds-icon-start]) {
-    margin-inline-start: -10px; // supplementary buttons with no icon try to align their label with paragraph text
   }
 
   // LOADING
@@ -927,5 +985,12 @@ p > a.hds-button.hds-button--supplementary:first-child {
 
     // Focus ring
     --focus-outline-color: var(--theme-focus, var(--color-coat-of-arms));
+  }
+
+  // In case a button with supplementary style is the first child inside a p-tag we can assume it is next to
+  // spacing of the element that contains the link so we want to move the supplementary button little bit to the left.
+  // Example: A button is written inside of a WYSIWYG-element and it is inside its p-tag as first item.
+  p > &[data-hds-variant='supplementary']:first-child {
+    margin-left: calc(-#{$spacing-half} + (-2px));
   }
 }
