--- a/templates/module/helfi_tpr/tpr-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-service.html.twig
@@ -27,7 +27,7 @@
       </div>
     {% endif %}
 
-    {% if content.field_content|render|striptags|trim is not empty %}
+    {% if content.field_content|render is not empty %}
       <div class="enriched-content components components--upper components--service">
         {{ content.field_content }}
       </div>
